--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<div>
 		<p><center><b><font size="40">Instructions</center></b></font></p>
 		<p><font size="15">WASD to move Around.
+		</br>Hold SHIFT to run.
 		</br>Left click to attack skeletons.
 		</br>Don't die.
 		</br>Have fun.</font></p>
